# llm-extract

./: .gitignore  README.md  pyproject.toml
data/example1-ev/: PROMPT.default.md  README.md  config.yaml  dataset.jsonl  dataset.lite.jsonl
data/example1-ev/documents/: doc.html.jsonl  doc.wikitext.jsonl
data/example1-ev/documents/html/: BMW_X1_(U11).html
data/example1-ev/documents/wikitext/: BMW_X1_(U11).wikitext  Tesla_Model_3.wikitext  Volvo_EX30.wikitext  XPeng_G6.wikitext
data/example2-img-transform/: PROMPT.default.md  README.md  dataset.jsonl
data/example2-img-transform/documents/: cloudflare.md  cloudinary.md
data/example2-img-transform/documents/process/: PROMPT-cloudflare.md  PROMPT-cloudinary.md  parse_cloudflare.py  parse_cloudinary.py  session-cloudflare.md  session-cloudinary.md
data/examples/: LLM-PROMPT-EV.md  README.md  config.yaml
data/examples/raw/: data.jsonl  data.lite.jsonl  generate_jsonl.py
data/examples/raw/html/: BMW_i4.html  BYD_Atto_3.html  BYD_Dolphin.html  BYD_Seal.html  BYD_Song_Plus.html  Kia_EV6.html  MG4_EV.html  Tesla_Model_3.html  Tesla_Model_Y.html  Volvo_EX30.html  XPeng_G6.html
data/examples/raw/wikitext/: BMW_i4.wikitext  BYD_Atto_3.wikitext  BYD_Dolphin.wikitext  BYD_Seal.wikitext  BYD_Song_Plus.wikitext  Kia_EV6.wikitext  MG4_EV.wikitext  Tesla_Model_Y.wikitext
llm_extract/: cli.py  config.py  ollama_ollama.py  simonw_llm.py
